# renovate-manager

./: .gitignore  Cargo.toml  README.md  flake.nix
.github/prompts/: github-team-refinement.prompt.md  project-creation.prompt.md
.github/workflows/: build-test.yaml
src/: auth.rs  github.rs  main.rs  models.rs  octocrab_ext.rs  utils.rs
src/ui/: app.rs  mod.rs  widgets.rs
